# arrcomp

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yaml
src/: lib.rs
