[package]
name = "arrcomp"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
keywords = [
  "macro",
  "list-comprehension",
  "comprehension"
]
description = "Python-style list comprehension syntax for contiguous memory Rust arrays."
repository = "https://github.com/janbridley/arrcomp"
readme = "README.md"
publish = true

exclude = [
    ".gitignore",
    ".pre-commit-config.yaml",
    ".github/*"
]
[dependencies]

[dev-dependencies]
rstest = "0.24.0"
